--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Primera Página</title>
-</head>
+<html>
 <body>
-  <h1>Bienvenido a mi página</h1>
-  <p>Este es un párrafo de ejemplo.</p>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
